# DrawCkt

./: Cargo.toml  README.md
drawckt/: .gitignore  Cargo.toml  README.md
drawckt-web/: .gitignore  Cargo.toml  README.md  build-production.sh  build.rs  build.sh  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
drawckt-web/demo/: wrong_sch.json
drawckt-web/doc/: schoa2json.il
drawckt-web/scripts/: build-docs.js
drawckt-web/src/: App.css  App.tsx  index.css  lib.rs  wasm.ts
drawckt-web/src/components/: LayerStylesEditor.css  LayerStylesEditor.tsx  Logger.css  Logger.tsx  SchematicView.css  SchematicView.tsx  SettingsPanel.css  SettingsPanel.tsx  SymbolEditor.css  SymbolEditor.tsx  SymbolsList.css  SymbolsList.tsx
drawckt-web/src/utils/: path.ts
drawckt-web/static/demo/: V2I.json  current_sense_amp.json  current_sense_opamp.json  opamp.json
drawckt-web/static/doc/: DrawCKT.il  index.md
drawckt-web/static/style/: acadmic.json  acadmic_no_label.json  virtuoso.json
drawckt/src/: error.rs  lib.rs  renderer.rs  schematic.rs  tests.rs
drawckt/tests/: iopin.drawio  parse_symbols_test.drawio  parse_symbols_test.rs  test_parse_drawio.rs
drawckt/tests/case1/: style.json
drawckt/tests/case2/: run.sh  schematic.json
drawckt/tests/case3/: run.sh  schematic.json
drawckt/tests/snapshots/: parse_symbols_test__iopin.snap  parse_symbols_test__parse_symbols_file.snap  parse_symbols_test__rupolym.snap  test_parse_drawio__iopin.snap  test_parse_drawio__rupolym.snap  test_parse_drawio__schematic.snap
drawckt/tests/test_parse_drawio/: rupolym.drawio  schematic.drawio
drawrs/: Cargo.toml
drawrs/examples/: bar_chart.rs  basic_objects.rs  circuit_latch.rs  colors_and_styles.rs  flowchart.rs  pie_chart.rs
drawrs/src/: error.rs  file.rs  lib.rs  page.rs  transform.rs  xml_base.rs  xml_parser.rs
drawrs/src/diagram/: base_diagram.rs  edges.rs  geometry.rs  mod.rs  objects.rs  text_format.rs
drawrs/src/diagram_types/: bar_chart.rs  binary_tree.rs  legend.rs  mod.rs  pie_chart.rs
drawrs/src/utils/: color_scheme.rs  mod.rs  page_sizes.rs  standard_colors.rs
drawrs/tests/: bar_chart_test.rs  binary_tree_test.rs  edge_test.rs  file_test.rs  legend_test.rs  object_test.rs  page_test.rs  pie_chart_test.rs  xml_base_test.rs
