[package]
name = "drawckt-web"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
drawckt = { path = "../drawckt" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
indexmap = "2.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
base64 = "0.21"
phf = { version = "0.11", features = ["macros"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]
