[package]
name = "drawckt-web"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
drawckt = { path = "../drawckt" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
zip = { workspace = true }
base64 = { workspace = true }
phf = { workspace = true }
getrandom = { workspace = true }

[build-dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
drawckt = { path = "../drawckt" }