[package]
name = "drawckt"
version = "0.1.0"
edition = "2024"

[dependencies]
drawrs = { path = "../drawrs" }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[[bin]]
name = "render_symbols"
path = "src/bin/render_symbols.rs"

[[bin]]
name = "render_schematic"
path = "src/bin/render_schematic.rs"
