[package]
name = "drawrs"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4", "js"] }
regex = "1.10"
chrono = "0.4"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
once_cell = "1.19"
dirs = "6.0.0"
thiserror = "1.0"
log = "0.4"
indexmap = "2.0"
itertools = { version = "0.14" }

[dev-dependencies]
tempfile = "3.8"
