[package]
name = "drawrs"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4", "js"] }
regex = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
